# scoreoperator

./: .gitignore  README.md  main.py  pyproject.toml
configs/: butterflies_eulerian.py  butterflies_eulerian_independent.py  circles_brownian.py  circles_eulerian.py  circles_eulerian_independent.py  configs.py  default_config.py
docs/: paper_plan.md  rebuttal.md
docs/note/: main.tex  refs.bib
examples/: butterflies_brownian.ipynb  butterflies_eulerian.ipynb  circles_brownian.ipynb  circles_eulerian.ipynb  kernels.ipynb  toy_score_operator_matching.ipynb
images/: Butterflies_bridges_real.drawio  CTUNO.drawio
plots/: butterfly_shape_bridge.ipynb  circle_brownian_bridges.ipynb  quadratic_brownian_bridge.ipynb  test.ipynb
src/: CTFNO.py  FNO.py  config.yaml  main.py  random_fields.py
src/bridgeop/data/: butterfly.py  function.py  synthetic.py
src/bridgeop/diffusion/: bridge.py  sde.py
src/bridgeop/neuralop/: blocks.py  uno.py
src/bridgeop/utils/: plotting.py  solver.py  trainer.py  util.py
src/data/: butterflies.py  function.py  read_files.ipynb  shape.py  synthetic.py  synthetic_shapes.py
src/data/burgers/: burgers.m  gen_burgers.m  grf.m
src/data/heat/: she.py
src/data/raw/: example_butterfly1.npy  example_butterfly2.npy
src/model/: spectral_conv.py
src/models/: FNO.py  blocks.py
src/tests/: test.sh  test_blocks.py  test_ctfno.py  test_data.py  test_diffusion.py  test_fno.py  test_function_data.py  test_gp.py  test_neuralop.py  test_random_fields.py  test_sde.py  test_uno.py
src/utils/: loss.py  plotting.py  trainer.py  util.py
(+12 files in other folders)
